# quiz_app

./: .env  pyproject.toml
quizapi/: main.py  settings.py
